--- a/nginx/nginx.conf.erb
+++ b/nginx/nginx.conf.erb
@@ -1,44 +1,86 @@
-user www www;
-worker_processes 8;
-pid /opt/nginx/logs/nginx.pid;
+worker_processes 4;
+user www-data www-data;
+
+pid /tmp/nginx.pid;
+error_log /tmp/nginx.error.log;
 
 events {
-  worker_connections 1024;
+  worker_connections 256;
+  accept_mutex off;
 }
 
 http {
+  include mime.types;
+  default_type application/octet-stream;
+  access_log /tmp/nginx.access.log combined;
+
   sendfile on;
   tcp_nopush on;
   tcp_nodelay off;
-  keepalive_timeout 30;
-  client_max_body_size 16m;
-  server_names_hash_max_size 8192;
-
-  include mime.types;
-  default_type application/octet-stream;
-
-  log_format main '$remote_addr - [$time_local] ($http_host) "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
-  access_log logs/access.log main;
 
   gzip on;
-  gzip_min_length 1024;
-  #gzip_vary on;
-  gzip_comp_level 9;
+  gzip_http_version 1.0;
   gzip_proxied any;
-  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_buffers 16 8k; # handle gzipped output up to 128kB
+  gzip_min_length 500;
+  gzip_disable "MSIE [1-6]\.";
+  gzip_types text/plain text/xml text/css
+             text/comma-separated-values
+             text/javascript application/x-javascript
+             application/atom+xml;
 
-  # Don't edit this to serve content; instead, add a vhost.
+
+  upstream <%=app_name %> {
+    server unix:<%=user_home %>/<%=app_name %>/thin.sock fail_timeout=0;
+  }
+
   server {
-    listen [::]:80;
-    server_name localhost;
+    listen   80;
+    server_name  www.<%=domain %>;
+    rewrite ^/(.*) http://<%=domain %> permanent;
+  }
+
+  server {
+    listen 80;
+    client_max_body_size 10M;
+    server_name <%=domain %>;
+
+    keepalive_timeout 5;
+
+    root <%=user_home %>/<%=app_name %>/public;
 
     location / {
-      root html;
-      index index.html;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+
+      if (!-f $request_filename) {
+        proxy_pass http://<%=app_name %>;
+      }
     }
   }
 
-  # Pull in all enabled vhosts
-  include vhosts/on/*.conf;
+  server {
+    listen 443;
+    client_max_body_size 10M;
+    server_name profitfilter.ru;
+
+    ssl                  on;
+    ssl_certificate      <%=user_home %>/<%=app_name %>/server.crt;
+    ssl_certificate_key  <%=user_home %>/<%=app_name %>/server.key;
+    ssl_ciphers          HIGH:!aNULL:!MD5;
+
+    keepalive_timeout 5;
+
+    root <%=user_home %>/<%=app_name %>/public;
+
+    location / {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_redirect off;
+
+      if (!-f $request_filename) {
+        proxy_pass http://<%=app_name %>;
+      }
+    }
+  }
 }
